delete products, scrollbar, fixed footer

--- a/angular-frontend/src/styles.css
+++ b/angular-frontend/src/styles.css
@@ -1,12 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
+
 .footer{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 70px;
+    height: 50px;
     background-color: #212529;
     text-align: center;
     color: #E1E3E6;
+    line-height: 35px;
+    
+}
+body::-webkit-scrollbar {
+    width: 12px;               /* ширина всей полосы прокрутки */
+}
+
+body::-webkit-scrollbar-track {
+    background: #212529;        /* цвет зоны отслеживания */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: rgb(81, 81, 103);    /* цвет бегунка */
+    border-radius: 1px;       /* округлось бегунка */
+    border: 3px solid #212529;  /* отступ вокруг бегунка */
+}
+body::-webkit-scrollbar-thumb:hover{
+    background-color: rgb(115, 115, 145);
 }
